# bitwig-osc-bridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
bitwigbridge/: __init__.py  connection.py  executor.py  langchain_tools.py  protocols.py
bitwigbridge/extensions/: BitwigOscBridge.bwextension  BitwigStepPlugin.bwextension  LaunchpadAgent.bwextension  __init__.py
bitwigbridge/launchpad/: controller.py  profiles.py
bitwigbridge/osc/: circuit_breaker.py  device_uuid.py  track_state.py
docs/: api.md
tests/: test_bitwigbridge.py
